--- a/midtern_nguyenphuchung/pubspec.yaml
+++ b/midtern_nguyenphuchung/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   image_picker: ^1.1.2
+  firebase_storage: ^12.3.3
+  provider: ^6.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
